# gobig

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake
dev/include/: test-env.bash
dev/scripts/: configure-project  run-tests  setup-tests
dev/testing/: CMakeLists.txt  Vagrantfile  basic-3.yml  ci.cmake  coveragerc.in  flake8.cfg  test-idempotency  testlib.cmake
dev/testing/cases/dummy/: site.yml  unit.yml
filter_plugins/: ec2.py  hosts_file.py  shim.py  zookeeper.py
playbooks/gobig/: site.yml
roles/mpich-install/tasks/: main.yml
roles/mpich-master-service-install/meta/: main.yml
roles/mpich-master-service/meta/: main.yml
roles/mpich-master-service/tasks/: main.yml
roles/mpich-master/meta/: main.yml
roles/mpich-slave-service-install/meta/: main.yml
roles/mpich-slave-service/tasks/: main.yml
roles/mpich-slave/meta/: main.yml
roles/mpich-variables/defaults/: main.yml
roles/mpich-variables/tasks/: main.yml
testing/: basic-3.yml  ci.cmake  playbook.yml  test-idempotency  testlib.cmake
testing/cases/dummy/: site.yml  unit.yml
